{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 217,
  "lineage": "91b39edf-f04d-1b7b-7ee7-e7e6a54e22de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0459875b7a7be98ce",
            "arn": "arn:aws:ec2:us-east-1:102465417222:instance/i-026f4ae0d0a2e0d29",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdcz",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0b32e2028e7819a57",
                "throughput": 0,
                "volume_id": "vol-0e1d3ff68e5cc6e99",
                "volume_size": 22,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026f4ae0d0a2e0d29",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ghudson-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8dd90c8c2da0b8a",
            "private_dns": "ip-192-168-149-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.149.66",
            "public_dns": "ec2-3-88-60-108.compute-1.amazonaws.com",
            "public_ip": "3.88.60.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 120,
                "tags": {
                  "Name": "Nexus Storage"
                },
                "throughput": 0,
                "volume_id": "vol-0ac7c68afa66f2029",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03888ea22f9ec02fb",
            "tags": {
              "Name": "Nexus Server"
            },
            "tags_all": {
              "Name": "Nexus Server",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02696e7fb16cd9ddd"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.nexus",
            "data.aws_ami.docker_server",
            "module.base_network.aws_subnet.private_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tdpraft",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:loadbalancer/app/tdp-lb/b3eec2c6dec9e2eb",
            "arn_suffix": "app/tdp-lb/b3eec2c6dec9e2eb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tdp-lb-165951805.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:102465417222:loadbalancer/app/tdp-lb/b3eec2c6dec9e2eb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tdp-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03e26f624724a8a8a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c0acdae5fabf5eb"
              },
              {
                "subnet_id": "subnet-0a984c952a87ac8fc"
              }
            ],
            "subnets": [
              "subnet-07c0acdae5fabf5eb",
              "subnet-0a984c952a87ac8fc"
            ],
            "tags": {
              "Environment": "development"
            },
            "tags_all": {
              "Environment": "development",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "vpc_id": "vpc-077547f5b2eece81a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.tdp_lb",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tdpraft",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:listener/app/tdp-lb/b3eec2c6dec9e2eb/73fdb5b835ed8a32",
            "certificate_arn": "arn:aws:acm:us-east-1:102465417222:certificate/4199bfbe-e6e5-4c62-b65c-95c56e034cd1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:targetgroup/nexus-ui/63b5ab15c85e0da5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:102465417222:listener/app/tdp-lb/b3eec2c6dec9e2eb/73fdb5b835ed8a32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:loadbalancer/app/tdp-lb/b3eec2c6dec9e2eb",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.tdpraft",
            "aws_lb.tdpraft",
            "aws_lb_target_group.nexus_ui",
            "aws_security_group.tdp_lb",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tdpraft_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:listener/app/tdp-lb/b3eec2c6dec9e2eb/4957a450b4563c84",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:102465417222:listener/app/tdp-lb/b3eec2c6dec9e2eb/4957a450b4563c84",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:loadbalancer/app/tdp-lb/b3eec2c6dec9e2eb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tdpraft",
            "aws_security_group.tdp_lb",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:targetgroup/nexus-ui/63b5ab15c85e0da5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:listener-rule/app/tdp-lb/b3eec2c6dec9e2eb/73fdb5b835ed8a32/ec7c9a1e58e1cdf5",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tdpraft.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/nexus/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:102465417222:listener-rule/app/tdp-lb/b3eec2c6dec9e2eb/73fdb5b835ed8a32/ec7c9a1e58e1cdf5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:listener/app/tdp-lb/b3eec2c6dec9e2eb/73fdb5b835ed8a32",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.tdpraft",
            "aws_lb.tdpraft",
            "aws_lb_listener.tdpraft",
            "aws_lb_target_group.nexus_ui",
            "aws_security_group.tdp_lb",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nexus_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:targetgroup/nexus-ui/63b5ab15c85e0da5",
            "arn_suffix": "targetgroup/nexus-ui/63b5ab15c85e0da5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:102465417222:targetgroup/nexus-ui/63b5ab15c85e0da5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nexus-ui",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:102465417222:targetgroup/nexus-ui/63b5ab15c85e0da5-20230531194603854000000002",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:102465417222:targetgroup/nexus-ui/63b5ab15c85e0da5",
            "target_id": "i-026f4ae0d0a2e0d29"
          },
          "dependencies": [
            "aws_instance.nexus_server",
            "aws_key_pair.deployer",
            "aws_lb_target_group.nexus_ui",
            "aws_security_group.nexus",
            "data.aws_ami.docker_server",
            "module.base_network.aws_subnet.private_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:security-group/sg-02696e7fb16cd9ddd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02696e7fb16cd9ddd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e26f624724a8a8a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e26f624724a8a8a"
                ],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "nexus_sg",
            "name_prefix": "",
            "owner_id": "102465417222",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tdp_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:security-group/sg-03e26f624724a8a8a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-03e26f624724a8a8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tdp_lb",
            "name_prefix": "",
            "owner_id": "102465417222",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:security-group-rule/sgr-032c2563992b9a5e1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-032c2563992b9a5e1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e26f624724a8a8a",
            "security_group_rule_id": "sgr-032c2563992b9a5e1",
            "tags": null,
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tdp_lb",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:security-group-rule/sgr-000a28c9d715fd61c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-000a28c9d715fd61c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e26f624724a8a8a",
            "security_group_rule_id": "sgr-000a28c9d715fd61c",
            "tags": null,
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tdp_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nexus_allow_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:security-group-rule/sgr-00dd4506e51fca4cb",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8081,
            "id": "sgr-00dd4506e51fca4cb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e26f624724a8a8a",
            "security_group_id": "sg-02696e7fb16cd9ddd",
            "security_group_rule_id": "sgr-00dd4506e51fca4cb",
            "tags": null,
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "to_port": 8082
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nexus",
            "aws_security_group.tdp_lb",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "nexus_ssh_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:security-group-rule/sgr-041198d134853cd63",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-041198d134853cd63",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03e26f624724a8a8a",
            "security_group_id": "sg-02696e7fb16cd9ddd",
            "security_group_rule_id": "sgr-041198d134853cd63",
            "tags": null,
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nexus",
            "aws_security_group.tdp_lb",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:security-group-rule/sgr-0c424517b8c4fae3b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c424517b8c4fae3b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03e26f624724a8a8a",
            "security_group_rule_id": "sgr-0c424517b8c4fae3b",
            "tags": null,
            "tags_all": {
              "Owner": "TDP",
              "Terraform": "True"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tdp_lb",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a61cf46be5615fb",
            "association_id": "eipassoc-0a74e8f8fab6dab55",
            "domain": "vpc",
            "id": "eipalloc-00a61cf46be5615fb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-035f67b0212278b65",
            "private_dns": "ip-192-168-17-235.ec2.internal",
            "private_ip": "192.168.17.235",
            "public_dns": "ec2-44-214-41-139.compute-1.amazonaws.com",
            "public_ip": "44.214.41.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tdrs-networking-nat-eip-us-east-1a"
            },
            "tags_all": {
              "Name": "tdrs-networking-nat-eip-us-east-1a",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032d3f2d147b456af",
            "association_id": "eipassoc-08b89af9c1bd80633",
            "domain": "vpc",
            "id": "eipalloc-032d3f2d147b456af",
            "network_border_group": "us-east-1",
            "network_interface": "eni-052d93f91d86ec669",
            "private_dns": "ip-192-168-63-152.ec2.internal",
            "private_ip": "192.168.63.152",
            "public_dns": "ec2-3-218-46-186.compute-1.amazonaws.com",
            "public_ip": "3.218.46.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tdrs-networking-nat-eip-us-east-1b"
            },
            "tags_all": {
              "Name": "tdrs-networking-nat-eip-us-east-1b",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:internet-gateway/igw-0451dd7c184522964",
            "id": "igw-0451dd7c184522964",
            "owner_id": "102465417222",
            "tags": {
              "Name": "tdrs-networking-internet-gw"
            },
            "tags_all": {
              "Name": "tdrs-networking-internet-gw",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a61cf46be5615fb",
            "association_id": "eipassoc-0a74e8f8fab6dab55",
            "connectivity_type": "public",
            "id": "nat-0e46d5a9da0e46872",
            "network_interface_id": "eni-035f67b0212278b65",
            "private_ip": "192.168.17.235",
            "public_ip": "44.214.41.139",
            "subnet_id": "subnet-0a984c952a87ac8fc",
            "tags": {
              "Name": "tdrs-networking-nat-gw-us-east-1a"
            },
            "tags_all": {
              "Name": "tdrs-networking-nat-gw-us-east-1a",
              "Owner": "TDP",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "module.base_network.aws_eip.nat_eip",
            "module.base_network.aws_internet_gateway.internet_gw",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032d3f2d147b456af",
            "association_id": "eipassoc-08b89af9c1bd80633",
            "connectivity_type": "public",
            "id": "nat-03d86334a808c944b",
            "network_interface_id": "eni-052d93f91d86ec669",
            "private_ip": "192.168.63.152",
            "public_ip": "3.218.46.186",
            "subnet_id": "subnet-07c0acdae5fabf5eb",
            "tags": {
              "Name": "tdrs-networking-nat-gw-us-east-1b"
            },
            "tags_all": {
              "Name": "tdrs-networking-nat-gw-us-east-1b",
              "Owner": "TDP",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "module.base_network.aws_eip.nat_eip",
            "module.base_network.aws_internet_gateway.internet_gw",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-038e67a21ed1e546c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e46d5a9da0e46872",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-038e67a21ed1e546c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_eip.nat_eip",
            "module.base_network.aws_internet_gateway.internet_gw",
            "module.base_network.aws_nat_gateway.nat_gw",
            "module.base_network.aws_route_table.private_subnets_route_table",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0517609168c8402701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03d86334a808c944b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0517609168c840270",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_eip.nat_eip",
            "module.base_network.aws_internet_gateway.internet_gw",
            "module.base_network.aws_nat_gateway.nat_gw",
            "module.base_network.aws_route_table.private_subnets_route_table",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0451dd7c184522964",
            "id": "r-rtb-0b480bc81df9b5c661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b480bc81df9b5c66",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_internet_gateway.internet_gw",
            "module.base_network.aws_route_table.public_subnets_route_table",
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0451dd7c184522964",
            "id": "r-rtb-04951c777748c3ae31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04951c777748c3ae3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_internet_gateway.internet_gw",
            "module.base_network.aws_route_table.public_subnets_route_table",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:route-table/rtb-038e67a21ed1e546c",
            "id": "rtb-038e67a21ed1e546c",
            "owner_id": "102465417222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e46d5a9da0e46872",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tdrs-networking-private-rt-us-east-1a"
            },
            "tags_all": {
              "Name": "tdrs-networking-private-rt-us-east-1a",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:route-table/rtb-0517609168c840270",
            "id": "rtb-0517609168c840270",
            "owner_id": "102465417222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03d86334a808c944b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tdrs-networking-private-rt-us-east-1b"
            },
            "tags_all": {
              "Name": "tdrs-networking-private-rt-us-east-1b",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:route-table/rtb-0b480bc81df9b5c66",
            "id": "rtb-0b480bc81df9b5c66",
            "owner_id": "102465417222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0451dd7c184522964",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tdrs-networking-public-rt-us-east-1a"
            },
            "tags_all": {
              "Name": "tdrs-networking-public-rt-us-east-1a",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:route-table/rtb-04951c777748c3ae3",
            "id": "rtb-04951c777748c3ae3",
            "owner_id": "102465417222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0451dd7c184522964",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tdrs-networking-public-rt-us-east-1b"
            },
            "tags_all": {
              "Name": "tdrs-networking-public-rt-us-east-1b",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_internet_route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0163671f419a66cc9",
            "route_table_id": "rtb-038e67a21ed1e546c",
            "subnet_id": "subnet-03888ea22f9ec02fb"
          },
          "dependencies": [
            "module.base_network.aws_route_table.private_subnets_route_table",
            "module.base_network.aws_subnet.private_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ede9866674a525e0",
            "route_table_id": "rtb-0517609168c840270",
            "subnet_id": "subnet-0141f910163149b3c"
          },
          "dependencies": [
            "module.base_network.aws_route_table.private_subnets_route_table",
            "module.base_network.aws_subnet.private_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_internet_route_table_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed32c8257a89dcd6",
            "route_table_id": "rtb-0b480bc81df9b5c66",
            "subnet_id": "subnet-0a984c952a87ac8fc"
          },
          "dependencies": [
            "module.base_network.aws_route_table.public_subnets_route_table",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071afdb80b86d6b6c",
            "route_table_id": "rtb-04951c777748c3ae3",
            "subnet_id": "subnet-07c0acdae5fabf5eb"
          },
          "dependencies": [
            "module.base_network.aws_route_table.public_subnets_route_table",
            "module.base_network.aws_subnet.public_subnets",
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:subnet/subnet-03888ea22f9ec02fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.128.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03888ea22f9ec02fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "102465417222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdrs-networking-private-net-us-east-1a"
            },
            "tags_all": {
              "Name": "tdrs-networking-private-net-us-east-1a",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:subnet/subnet-0141f910163149b3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0141f910163149b3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "102465417222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdrs-networking-private-net-us-east-1b"
            },
            "tags_all": {
              "Name": "tdrs-networking-private-net-us-east-1b",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:subnet/subnet-0a984c952a87ac8fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a984c952a87ac8fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102465417222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdrs-networking-public-net-us-east-1a"
            },
            "tags_all": {
              "Name": "tdrs-networking-public-net-us-east-1a",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:subnet/subnet-07c0acdae5fabf5eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c0acdae5fabf5eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "102465417222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tdrs-networking-public-net-us-east-1b"
            },
            "tags_all": {
              "Name": "tdrs-networking-public-net-us-east-1b",
              "Owner": "TDP",
              "Terraform": "True"
            },
            "vpc_id": "vpc-077547f5b2eece81a"
          },
          "dependencies": [
            "module.base_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:102465417222:vpc/vpc-077547f5b2eece81a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e5a656ecb5fde581",
            "default_route_table_id": "rtb-00b4cc02df9c27236",
            "default_security_group_id": "sg-03db24c9790ce878c",
            "dhcp_options_id": "dopt-0548a79798b5992be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077547f5b2eece81a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b4cc02df9c27236",
            "owner_id": "102465417222",
            "tags": {
              "Name": "tdrs-networking-vpc"
            },
            "tags_all": {
              "Name": "tdrs-networking-vpc",
              "Owner": "TDP",
              "Terraform": "True"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}